--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   hexcolor: ^2.0.7
-  draggable_fab: ^0.1.4
+  fluttertoast: ^8.0.9
+  flutter_bloc: ^8.0.1
+  bloc: ^8.0.3
+  shared_preferences: ^2.0.15
+  conditional_builder_null_safety: ^0.0.6
+  splashscreen: ^1.3.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
