--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   shared_preferences: ^2.0.15
   conditional_builder_null_safety: ^0.0.6
   splashscreen: ^1.3.5
-
+  carousel_slider: ^4.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
