--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   conditional_builder_null_safety: ^0.0.6
   splashscreen: ^1.3.5
   carousel_slider: ^4.1.1
+  flutter_image_slideshow: ^0.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
