--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   splashscreen: ^1.3.5
   carousel_slider: ^4.1.1
   flutter_image_slideshow: ^0.1.4
+  font_awesome_flutter: ^10.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,7 +61,19 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  fonts:
+  - family: Gilroy
+    fonts:
+      - asset: assets/fonts/Gilroy-ExtraBold.ttf
+      - asset: assets/fonts/Gilroy-Bold.ttf
+      - asset: assets/fonts/Gilroy-Light.ttf
+      - asset: assets/fonts/Gilroy-Regular.ttf
+        style: italic
+  - family: Trajan Pro
+    fonts:
+      - asset: assets/fonts/TrajanPro.ttf
+      - asset: assets/fonts/TrajanPro_Bold.ttf
+        weight: 700
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -82,17 +95,5 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
