--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_image_slideshow: ^0.1.4
   font_awesome_flutter: ^10.2.1
   flutter_screenutil: ^5.6.0
+  flutter_rating_bar: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
